# foxtrotgps

./: .bzrignore  AUTHORS  Makefile.am  configure.in
data/: foxtrotgps.glade  foxtrotgps.glade.in
po/: POTFILES.in
src/: Makefile.am  callbacks.c  callbacks.h  converter.c  converter.h  friends.c  friends.h  geo_photos.c  geo_photos.h  globals.c  globals.h  gps_functions.c  gps_functions.h  init.c  init.h  interface.c  interface.h  main.c  map_management.c  map_management.h  poi.c  poi.h  support.c  support.h  tile_management.c  tile_management.h  tracks.c  tracks.h  wp.c  wp.h
src/gps/: gpsd_provider.c  maemo5_provider.c  provider.h
