dnl Process this file with autoconf to produce a configure script.

AC_INIT([FoxtrotGPS], [0.99.4], [foss-gps@lists.osgeo.org])
AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC_C99
AC_HEADER_STDC

GETTEXT_PACKAGE=foxtrotgps
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Package name for gettext])
AC_PROG_INTLTOOL([0.23])

dnl Languages which your application supports
ALL_LINGUAS="bg cs de es fi fr hu ru sk nl"
AM_GLIB_GNU_GETTEXT

AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GTK, [gtk+-2.0 gdk-2.0 gthread-2.0])
PKG_CHECK_MODULES(GLADE, [libglade-2.0])
PKG_CHECK_MODULES(GCONF, [gconf-2.0])
PKG_CHECK_MODULES(LIBCURL, [libcurl])
PKG_CHECK_MODULES(SQLITE, [sqlite3])
PKG_CHECK_MODULES(LIBEXIF, [libexif])
PKG_CHECK_MODULES(LIBXML, [libxml-2.0])
PKG_CHECK_MODULES(OSMGPSMAP, [osmgpsmap])

AC_ARG_ENABLE(maemo5,
        [  --enable-maemo5          enable Maemo 5 integration],,
        enable_maemo5=no)

AM_CONDITIONAL(ENABLE_MAEMO5, [test x$enable_maemo5 = xyes])

if test x$enable_maemo5 = xyes; then
	PKG_CHECK_MODULES(LIBLOCATION, [liblocation]) 
	CFLAGS="$CFLAGS -DUSE_LIBLOCATION"
else
	PKG_CHECK_MODULES(LIBGPS, [libgps >= 2.90])
fi


AC_OUTPUT([
Makefile
po/Makefile.in
src/Makefile
pixmaps/Makefile
data/Makefile
data/foxtrotgps.glade
])
